<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/SearchEditText"
        android:layout_width="247dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="244dp"
        android:ems="10"
        android:hint="@string/search_for_news"
        android:inputType="text"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#4CAF50"
        android:enabled="false"
        android:text="@string/search"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/SearchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SearchEditText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/TopHeadlinesButton"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/top_headlines"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchEditText" />

    <Button
        android:id="@+id/NewsByLocationButton"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:text="@string/news_by_location"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/TopHeadlinesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TopHeadlinesButton" />
</androidx.constraintlayout.widget.ConstraintLayout>